feat: show details about a pokemon on click
Signed-off-by: Wesley M <wesleymdeandrade@gmail.com>

--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
     <section class="content">
         <h1>Pokedex</h1>
 
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
-        </ol>
+        <h2 id="pokemonDetailed"></h2>
 
-        <div class="pagination">
+        <div id="listContent">
+            <ol id="pokemonList" class="pokemons">
+                <!-- ..... Pokemons here ..... -->
+            </ol>
+
+        </div>
+        <div id="simpleButton" class="simpleButton">
             <button id="loadMoreButton" type="button">
                 Load More
             </button>
